Fix core image block overflow issue

--- a/src/style/front-end/overides/_content-figure.scss
+++ b/src/style/front-end/overides/_content-figure.scss
@@ -3,3 +3,9 @@ figure {
     max-width:100%;
     min-height:1px;
 }
+.wp-block-image .aligncenter, .wp-block-image .alignleft, .wp-block-image .alignright, .wp-block-image.is-resized{
+    display:block;
+}
+.wp-block-image .aligncenter>figcaption, .wp-block-image .alignleft>figcaption, .wp-block-image .alignright>figcaption, .wp-block-image.is-resized>figcaption{
+    display:block
+}
